<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@color/white">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/left"
            android:padding="5dp"
            android:background="@color/white"
            android:clickable="true"
            android:id="@+id/home_img_button_change_password"
            android:scaleType="fitCenter"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/skin"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:text="@string/password_ma"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:text="@string/old_password_ma_cp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/old_password_cp"
            android:hint="@string/edit_old_password_ma_cp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:text="@string/new_password_ma_cp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/new_password_cp"
            android:hint="@string/edit_new_password_ma_cp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/submit_change_password_ma_cp"
            android:onClick="submitChangePassword" />
    </LinearLayout>
</LinearLayout>