<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/global_bg"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_my_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@color/white">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_left_arrow"
            android:padding="5dp"
            android:background="@color/white"
            android:clickable="true"
            android:id="@+id/home_img_button_my_account"
            android:scaleType="fitCenter"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/skin"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:text="@string/title_my_account"
            />
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
        android:layout_below="@+id/activity_my_account_toolbar"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_1"
        android:layout_gravity="center"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:id="@+id/myAccountContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_menu_my_account"
                android:background="@color/purple">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/title_home"/>
            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingTop="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="120dp"
                    android:text="@string/email_ma"
                    android:textColor="@color/global_text"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/email_baker_ma"
                    android:layout_width="match_parent"
                    android:text="@string/default_val_so"
                    android:textColor="@color/global_text"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="120dp"
                    android:text="@string/phone_ma"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/global_text"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/phone_baker_ma"
                    android:layout_width="match_parent"
                    android:text="@string/default_val_so"
                    android:textColor="@color/global_text"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="120dp"
                    android:text="@string/address_ma"
                    android:textColor="@color/global_text"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/address_baker_ma"
                    android:layout_width="match_parent"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:text="@string/default_val_so"
                    android:textColor="@color/global_text"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/password_ma"
                    android:onClick="changePassword" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/logout_text"
                    android:onClick="logout"
                    android:layout_weight="1"
                    />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <ProgressBar
        android:id="@+id/activity_my_account_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>