<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/baker_specific_order_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/single_order_img_button_app_version"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:clickable="true"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/title_order_history"
            android:textColor="@color/skin"
            android:textSize="25sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/baker_specific_order_toolbar"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_menu_oh_detailed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/order_id"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/order_id_order_history_detailed"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/order_status_oh_detailed"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/orange"
                    android:padding="5dp"
                    android:text="@string/order_status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"


                    />

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/skin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/booking_date_oh_detailed"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/booking_date"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/pickup_date_oh_detailed"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pickup_date"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/drop_date_oh_detailed"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/drop_date"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/cake_so" />

                <TextView
                    android:id="@+id/cake_val_type"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="Weight" />

                <TextView
                    android:id="@+id/cake_val_wt"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="Cost" />

                <TextView
                    android:id="@+id/cake_val_cost"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pickup_so" />

                <TextView
                    android:id="@+id/pickup_val_so"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/customer_so" />

                <TextView
                    android:id="@+id/customer_val_so"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/phone_so" />

                <TextView
                    android:id="@+id/phone_val_so"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/address_so" />

                <TextView
                    android:id="@+id/address_val_so"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/drop_so" />

                <TextView
                    android:id="@+id/drop_val_so"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="Instructions" />

                <TextView
                    android:id="@+id/baker_specific_order_instructions"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_val_so" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Call Baker"
                    android:onClick="callBaker"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Call Customer"
                    android:onClick="callCustomer"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>